--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shifumi</title>
     <link rel="stylesheet" href="assets/css/style.css" />
-    <script async src="assets/js/function.js"></script>
+    <script async src="assets/js/script.js"></script>
   </head>
 
   <body>
