--- a/game.html
+++ b/game.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fight</title>
     <link rel="stylesheet" href="assets/css/style2.css" />
+    <script async src="./assets/js/script.js"></script>
   </head>
   <body>
     <section class="fight1">
