--- a/game.html
+++ b/game.html
@@ -12,6 +12,7 @@
     <section class="fight1">
       <div class="container-top1">
         <p>Player 1</p>
+        <img src="assets/img/3.svg" width="20%">
         <p>Player 2</p>
       </div>
       <div class="container-top2">
