Ajout classe et %

--- a/game.html
+++ b/game.html
@@ -24,8 +24,8 @@
         <button><img width="100%" src="./assets/img/pieds 1.png" /></button>
       </div>
       <div class="container-bas2">
-        <img width="auto" src="./assets/img/perso1.png" />
-        <img width="auto" src="./assets/img/perso2.png" />
+        <img class="caracter1" width="auto" src="./assets/img/perso1.png" />
+        <img class="caracter2" width="auto" src="./assets/img/perso2.png" />
       </div>
     </section>
   </body>
