--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a>Defeat : 0</a>
         </div>
         <div class="ratio">
-          <a>Ratio : 0</a>
+          <a>Ratio : 0%</a>
         </div>
       </div>
       >
