--- a/game.html
+++ b/game.html
@@ -6,23 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fight</title>
     <link rel="stylesheet" href="assets/css/style2.css" />
-    <script src="/assets/js/script.js"></script>
+    <script async src="assets/js/script.js"></script>
   </head>
   <body>
     <section class="fight1">
       <div class="container-top1">
         <p>Player 1</p>
+        <img src="assets/img/3.svg" width="20%" id="imgtimer">
         <p>Player 2</p>
       </div>
       <div class="container-top2">
+      </div>
     </section>
-    <section class="bas">
+    <section>
       <div class="container-bas">
         <button id="pierre" onclick="checker('rock')">
           <img width="80%" src="./assets/img/poing_1-removebg-preview.png" />
         </button>
-        <button id="feuille" onclick="checker('paper')""><img src="./assets/img/feuille2.png" /></button>
-        <button id="ciseaux" onclick="checker('scissor')"><img width="100%" src="./assets/img/pieds 1.png" /></button>
+        <button id="feuille" onclick="checker('paper')"><img src="./assets/img/feuille2.png" /></button>
+        <button id="ciseaux" onclick="checker('scissor')"><img width="100%" src="./assets/img/feet_comp.png" /></button>
       </div>
       <div class="container">
         <div class="scores">
@@ -40,7 +42,6 @@
             <p id="result"></p>
         </div>
     </div>
-
       <div class="container-bas2">
         <img width="auto" src="./assets/img/perso1.png" />
         <img width="auto" src="./assets/img/perso2.png" />
