début affichage de victoire

--- a/game.html
+++ b/game.html
@@ -20,11 +20,11 @@
     </section>
     <section>
       <div class="container-bas">
-        <button id="pierre" onclick="checker('rock')">
-          <img width="80%" src="./assets/img/poing_1-removebg-preview.png" />
+        <button onclick="checker('rock')">
+          <img width="80%" src="./assets/img/poing_1-removebg-preview.png" id="pierre"/>
         </button>
-        <button id="feuille" onclick="checker('paper')"><img src="./assets/img/feuille2.png" /></button>
-        <button id="ciseaux" onclick="checker('scissor')"><img width="100%" src="./assets/img/feet_comp.png" /></button>
+        <button onclick="checker('paper')"><img src="./assets/img/feuille2.png" id="feuille"/></button>
+        <button onclick="checker('scissor')"><img width="100%" src="./assets/img/feet_comp.png" id="ciseaux"/></button>
       </div>
       <div class="container">
         <div class="scores">
