--- a/game.html
+++ b/game.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fight</title>
     <link rel="stylesheet" href="assets/css/style2.css" />
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <script async src="./assets/js/script.js"></script>
   </head>
   <body>
     <section class="fight1">
@@ -24,8 +26,8 @@
         <button><img width="100%" src="./assets/img/pieds 1.png" /></button>
       </div>
       <div class="container-bas2">
-        <img class="caracter1" width="auto" src="./assets/img/perso1.png" />
-        <img class="caracter2" width="auto" src="./assets/img/perso2.png" />
+        <img class="caracter1" width="auto" src="./assets/img/ryu.gif" />
+        <img class="caracter2" width="auto" src="./assets/img/ken.gif" />
       </div>
     </section>
   </body>
