--- a/game.html
+++ b/game.html
@@ -26,7 +26,7 @@
         <button onclick="checker('paper')"><img src="./assets/img/feuille2.png" id="feuille"/></button>
         <button onclick="checker('scissor')"><img width="100%" src="./assets/img/feet_comp.png" id="ciseaux"/></button>
       </div>
-      <div class="container">
+      <div class="container" id="container">
         <div class="scores">
             <p>Computer : 
                 <span id="computer_score">0</span>
