--- a/game.html
+++ b/game.html
@@ -11,40 +11,58 @@
   <body>
     <section class="fight1">
       <div class="container-top1">
+        <img
+          class="heartlife1"
+          id="heartlife1"
+          src="/assets/img/coeur_de_vie_10.png"
+          width="70vw"
+          height="70vh"
+        />
         <p>Player 1</p>
-        <img src="assets/img/3.svg" width="20%" id="imgtimer">
+        <img src="assets/img/3.svg" width="20%" id="imgtimer" />
         <p>Player 2</p>
+        <img
+          class="heartlife2"
+          id="heartlife2"
+          src="./assets/img/coeur_de_vie_10.png"
+          width="70vw"
+          height="70vh"
+        />
       </div>
-      <div class="container-top2">
-      </div>
+      <div class="container-top2"></div>
     </section>
     <section>
       <div class="container-bas">
         <button id="pierre" onclick="checker('rock')">
           <img width="80%" src="./assets/img/poing_1-removebg-preview.png" />
         </button>
-        <button id="feuille" onclick="checker('paper')"><img src="./assets/img/feuille2.png" /></button>
-        <button id="ciseaux" onclick="checker('scissor')"><img width="100%" src="./assets/img/feet_comp.png" /></button>
+        <button id="feuille" onclick="checker('paper')">
+          <img src="./assets/img/feuille2.png" />
+        </button>
+        <button id="ciseaux" onclick="checker('scissor')">
+          <img width="100%" src="./assets/img/feet_comp.png" />
+        </button>
       </div>
       <div class="container">
         <div class="scores">
-            <p>Computer : 
-                <span id="computer_score">0</span>
-            </p>
-            <p>
-                You :
-                <span id="user_score">0</span>
-            </p>
+          <p>
+            Computer :
+            <span id="computer_score">0</span>
+          </p>
+          <p>
+            You :
+            <span id="user_score">0</span>
+          </p>
         </div>
         <div class="details">
-            <p id="user_choice"></p>
-            <p id="comp_choice"></p>
-            <p id="result"></p>
+          <p id="user_choice"></p>
+          <p id="comp_choice"></p>
+          <p id="result"></p>
         </div>
-    </div>
+      </div>
       <div class="container-bas2">
-        <img width="auto" src="./assets/img/perso1.png" id="p1"/>
-        <img width="auto" src="./assets/img/perso2.png" id="p2"/>
+        <img width="auto" src="./assets/img/perso1.png" id="p1" />
+        <img width="auto" src="./assets/img/perso2.png" id="p2" />
       </div>
     </section>
   </body>
