--- a/index.html
+++ b/index.html
@@ -35,9 +35,13 @@
             <h2>Rules :</h2>
             <a class="close" href="#">&times;</a>
             <div class="content">
-              Once in three players reveal their hand (rock, paper or scissors)
-              at the same time. The strongest shape wins and the player scores
-              the winning point. If both players use the same form it is a draw.
+              <p>
+                Once in three players reveal their hand (rock, paper or
+                scissors) at the same time. The strongest shape wins and the
+                player scores the winning point. If both players use the same
+                form it is a draw.
+              </p>
+              <img src="assets/img/menu_regle.png" />
             </div>
           </div>
         </div>
