ajout du système de vie (tom)

--- a/game.html
+++ b/game.html
@@ -11,12 +11,25 @@
   <body>
     <section class="fight1">
       <div class="container-top1">
+        <img
+          class="heartlife1"
+          id="heartlife1"
+          src="assets/img/coeur_de_vie_10.png"
+          width="70vw"
+          height="70vh"
+        />
         <p>Player 1</p>
-        <img src="assets/img/3.svg" width="20%" id="imgtimer">
+        <img src="assets/img/3.svg" width="20%" id="imgtimer" />
         <p>Player 2</p>
+        <img
+          class="heartlife2"
+          id="heartlife2"
+          src="assets/img/coeur_de_vie_10.png"
+          width="70vw"
+          height="70vh"
+        />
       </div>
-      <div class="container-top2">
-      </div>
+      <div class="container-top2"></div>
     </section>
     <section>
       <div class="container-bas">
