--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -26,7 +25,7 @@
     >
     <div class="menu">
       <div class="box">
-        <a class="button" href="game.html">Start</a>
+        <a class="button" href="game.html" target="_blank">Start</a>
       </div>
       <div class="box">
         <a class="button" href="#popup1">Rules</a>
